# iec61850_simulator

./: .gitignore  .gitmodules  README.md  TODO.md  build.sh  main.py  pyproject.toml  pytest.ini  run.sh  test_network_interface.py  test_pyiec61850_impl.py
config/: config.yaml  data_model.yaml
doc/: architecture.md  design.md  ipc_protocol.md  network_interface_guide.md  workflow.md
iec61850/: CMakeLists.txt
iec61850/cmake/: coverage.cmake
iec61850/src/: CMakeLists.txt  action_client.cpp  action_client.hpp  action_server.cpp  action_server.hpp  core_context.cpp  core_context.hpp  core_main.cpp  ipc_server.cpp  ipc_server.hpp  log4cplus.ini  logger.cpp  logger.hpp  main.cpp  msgpack_codec.cpp  msgpack_codec.hpp  network_config.cpp  network_config.hpp  protocol.hpp
iec61850/src/action/: action.cpp  action.hpp  action_base.hpp  action_handle.hpp  action_registry.cpp  action_registry.hpp  client_actions.cpp  server_actions.cpp  server_load_model.cpp
iec61850/tests/: CMakeLists.txt  action_server_test.cpp  network_config_test.cpp  test_helpers.cpp  test_helpers.hpp
iec61850/tests/cmake/: capability.cmake  coverage.cmake
src/: __init__.py
src/backend/: core_process.py
src/client/: __init__.py  client_proxy.py  iec61850_client.py  instance_manager.py
src/config/: __init__.py  constants.py
src/core/: __init__.py  data_model.py  data_model_manager.py  scd_parser.py
src/gui/: __init__.py  client_panel.py  data_tree_widget.py  instance_list_widget.py  log_widget.py  main_window.py  multi_client_panel.py  multi_server_panel.py  server_panel.py
src/gui/ui/: client_panel.ui  connection_dialog.ui  data_tree_widget.ui  log_widget.ui  main_window.ui  server_panel.ui
src/ipc/: __init__.py  uds_client.py
src/server/: __init__.py  iec61850_server.py  instance_manager.py  server_proxy.py
tests/: README.md  __init__.py  conftest.py  test_client_instance_manager.py  test_data_model.py  test_data_model_manager.py  test_iec61850_server.py  test_server_instance_manager.py  test_server_proxy.py
tests/test_data/: README.md
